2020-06-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.14

	* DESCRIPTION (URL): Updated to https://vowpalwabbit.org/

	* src/vw.cc: Replace obsoleted ftime() calls with gettimeofday() at the
	request of CRAN, thanks to Brian Ripley for the gettimeofday() hint
	* src/bfgs.cc: Idem
	* src/accumulate.cc: Idem

	* configure.ac: Renamed from configure.in, also retired long-obsolete Rcpp
	linker flags check, commented out two more lines
	* configure: Regenerated

	* README.md: Add 'last commit' badge, also mention rvw-org/rvw and
	vowpalwabbit.org

	* .travis.yml: Switch to 'bionic' and R 4.0.0

2019-06-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Author): Use name without email as in other packages

2019-02-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.13

	* DESCRIPTION: Set 'StagedInstall: no' to accomodate R 3.6.0

2018-09-02  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Minor update

2018-02-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.12

	* src/active_interactor.cc: Minor edit to squash g++ warning
	* src/bfgs.cc: Idem

2018-01-30  Dirk Eddelbuettel  <edd@debian.org>

	* tests/test1.r: Output written by -f to be witin tempdir() [CRAN]
	* tests/test5.r: Idem
	* tests/test7.r: Idem
	* demo/vw.R: Idem
	* man/vw.Rd: Idem (in example)

2018-01-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.11

	* tests/test1.r: Set --cache_file to be witin tempdir() [CRAN request]
	* tests/test2.r: Idem
	* tests/test5.r: Idem
	* tests/test6.r: Idem
	* tests/test8.r: Idem
	* demo/vw.R: Idem
	* man/vw.Rd: Idem (in example)

2017-12-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.10

	* man/vw.Rd: Refer to some files directly [CRAN request]
	* tests/test1.r: Idem
	* tests/test2.r: Idem
	* tests/test5.r: Idem
	* tests/test6.r: Idem
	* tests/test7.r: Idem
	* tests/test8.r: Idem